Sat May  7 22:58:00 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_var): no libs argument is given.

Sun May  1 09:58:11 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_sflag): replace '-' in variable names with '_'.
	  [ruby-dev:26107]

	* ruby.c (set_arg0): use also environment variable space for setting
	  $0.  [ruby-core:04774]

Wed Apr 27 23:42:22 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (OPTFLAGS): default global optimization to
	  disabled only for VC++6.

Tue Apr 26 22:58:00 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_invoke_core): call Tcl's "::unknown"
	  command when can't get information of target command.

Mon Apr 25 01:18:43 2005  Tanaka Akira  <akr@m17n.org>

	* regex.c: declare rb_warn to have variadic argument.  [ruby-core:4751]

Sat Apr 23 19:45:59 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tcltklib/tcltklib.c (ip_RubyExitCommand): exit with status code
	  via TclTkIp#_eval didn't work. [ruby-talk:139390]

Fri Apr 22 16:41:50 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tcltklib/tcltklib.c (ip_set_exc_message): fixed memory leak.

	* ext/tcltklib/tcltklib.c: eTkCallbackReturn was not initialized.

Thu Apr 21 00:07:50 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): support platforms have file separator
	  other than /.

	* {bcc32,win32,wince}/Makefile.sub (BUILD_FILE_SEPARATOR): separator
	  of building platform.

	* {bcc32,win32,wince}/Makefile.sub (CP, INSTALL): use COPY command.

Wed Apr 20 23:22:39 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk: miniruby depens on MINIOBJS.

	* dmydln.c (dln_load): dummy function to raise LoadError.

	* cygwin/GNUmakefile.in, {bcc32,win32,wince}/Makefile.sub: miniruby
	  can't load extensions on Windows.

Wed Apr 20 23:01:35 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/ifchange.bat: delete testing files.
